# lifesync_backend

./: .env.example  .replit  lifesync.db  main.py  pyproject.toml  requirements.txt
Test/: conftest.py  test_analytics.py  test_ar.py  test_auth.py  test_community.py  test_email.py  test_finance.py  test_gamification.py  test_preferences.py  test_smart_home.py  test_voice.py
app/: worker.py
app/api/: deps.py
app/api/v1/endpoints/: analytics.py  ar.py  calendar.py  community.py  device.py  email.py  finance.py  goal.py  health.py  insights.py  intelligence.py  notifications.py  smart_home.py  users.py
app/core/: auth.py  config.py
app/db/: base.py
app/models/: __init__.py  ar_data.py  device.py  gamification.py  goal.py  integration.py  smart_home.py  user.py
app/schemas/: device.py  integration.py  user.py
app/services/: analytics_service.py  community_service.py  data_integration_service.py  financial_service.py  fitbit_service.py  gamefication_service.py  gamification_service.py  gmail_service.py  google_calendar_service.py  health_analysis_service.py  intelligence_service.py  notification_service.py  recommendation_service.py  schedule_optimizer.py  social_connection_service.py  user_preference_service.py  user_service.py  voice_service.py
app/utils/: logging_utils.py  redis_utils.py
attached_assets/: Pasted--LifeSync-Backend-Development-Prompt-Project-Overview-Build-a-complete-Python-backend-for-Life-1744567131882.txt
