[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.1",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.166.0",
    "google-auth-oauthlib>=1.2.1",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "supabase>=2.15.0",
    "uvicorn>=0.34.1",
    "email-validator>=2.2.0",
    "numpy>=2.2.4",
]
